force-app/main/default/objects/ChargeCodeType__c/ChargeCodeType__c.object-meta.xml
<CustomObject>
    <label>Charge Code Type</label>
    <nameField>
        <label>Charge Code Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Code Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>