force-app/main/default/objects/ChargeCodeType__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>