force-app/main/default/objects/ChargeCodeType__c/fields/objectId__c.field-meta.xml
<CustomField>
    <fullName>objectId__c</fullName>
    <description>Object Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Object Id - do not set via SF. Only used for data initialization</inlineHelpText>
    <label>Object Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>