force-app/main/default/objects/ChargeCodeType__c/fields/shortDescription__c.field-meta.xml
<CustomField>
    <fullName>shortDescription__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Short Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>