force-app/main/default/objects/ChargeCodeType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>shortDescription__c</columns>
    <columns>description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>